correcting spacing of info boxes

--- a/sharingmedia/app/webroot/css/initial_offers.css
+++ b/sharingmedia/app/webroot/css/initial_offers.css
@@ -41,3 +41,8 @@
 #special{
 	width: 200px;	
 }
+
+.top_progress_arrows {
+	margin-top: 10px;
+	text-align: center;
+}
