--- a/sharingmedia/app/webroot/css/main.css
+++ b/sharingmedia/app/webroot/css/main.css
@@ -116,7 +116,7 @@ ul ul{
 
 #fields label{
 	float: left;
-	width: 150px;	
+	width: 100px;	
 }
 
 #add{
